# Anon-Launcher

./: .git-commit-msg  .gitignore  AUDYT_PROJEKTU.md  AnonLauncher.json  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  Fabulously.Optimized-v8.2.0.mrpack  LICENSE  PRIVACY.md  README-pl.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
anon-chat/: build.gradle  settings.gradle
docs/: index.html  locales.json  style.css
src/: main.tsx  router.tsx
src-tauri/: Cargo.toml  LICENSE.rtf  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: account_manager.rs  auth.rs  content_installer.rs  crash_handler.rs  dependency_resolver.rs  game_data.rs  instance_manager.rs  java_manager.rs  lib.rs  main.rs  manifest.rs  manifest_migration.rs  minecraft_core.rs  mod_installer.rs  modpack_installer.rs  neoforge_installer.rs  process_manager.rs  sanitize.rs  snapshot.rs  zip_export.rs  zip_import.rs
src/components/: AccountManagerDialog.tsx  AccountSwitcher.tsx  AppLayout.tsx  AvatarRenderer.tsx  CloneInstanceDialog.tsx  ContentBrowser.tsx  ContentList.tsx  CrashReportList.tsx  CrashReportViewer.tsx  CreateInstanceForm.tsx  DeleteInstanceDialog.tsx  DeviceCodeDisplay.tsx  EditInstanceDialog.tsx  ExportInstanceDialog.tsx  FirstRunWizard.tsx  GameConsole.tsx  GameOverview.tsx  HeroCard.tsx  IconPicker.tsx  ImportFromLinkDialog.tsx  ImportInstanceDialog.tsx  InstanceCard.tsx  InstanceGrid.tsx  InstanceIcon.tsx  InstanceTabs.tsx  JavaSettings.tsx  LaunchButton.tsx  ModList.tsx  (+13 more)
tasks/: INDEX.md
(+92 files in other folders)
