[package]
name = "anon-launcher"
version = "0.1.7"
description = "Uniwersalny Launcher Minecraft"
authors = ["AnonLauncher"]
edition = "2021"

[lib]
name = "anon_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
# Path functionality is part of tauri core API
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tauri-plugin-dialog = "2"
zip = "2"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tauri-plugin-stronghold = "2.3.1"
tar = "0.4.46"
flate2 = "1.1.9"
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
chrono = "0.4"

# Stronghold uses scrypt which benefits from optimization
[profile.dev.package.scrypt]
opt-level = 3

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
